--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -2294,6 +2294,7 @@
     "no": "no",
     "no data": "no data",
     "no service is connected currently, click the button below to access the service": "no service is connected currently, click the button below to access the service",
+    "no service is connected currently, if you deploy an application on the DevOps platform, the service will be displayed automatically": "no service is connected currently, if you deploy an application on the DevOps platform, the service will be displayed automatically",
     "node list": "node list",
     "node traffic management": "node traffic management",
     "normal": "normal",
