fix(cmp): resource rank table optimization

--- a/locales/en.json
+++ b/locales/en.json
@@ -33,7 +33,7 @@
     "Beijing": "Beijing",
     "Britain": "Britain",
     "CPU allocation": "CPU allocation",
-    "CPU limit": "CPU limit",
+    "CPU quota": "CPU quota",
     "Chengdu": "Chengdu",
     "China": "China",
     "Cloud management": "Cloud management",
@@ -80,7 +80,7 @@
     "Market": "Market",
     "May": "May",
     "Members under the project/application associated with the current API can view it.": "members under the project/application associated with the current API can view",
-    "Memory limit": "Memory limit",
+    "Memory quota": "Memory quota",
     "Middle-east & India": "Middle-east & India",
     "Mobile": "Mobile",
     "Model": "Model",
