--- a/locales/zh.json
+++ b/locales/zh.json
@@ -33,7 +33,7 @@
     "Beijing": "北京",
     "Britain": "英国",
     "CPU allocation": "CPU 分配",
-    "CPU limit": "CPU 限额",
+    "CPU quota": "CPU 配额",
     "Chengdu": "成都",
     "China": "中国",
     "Cloud management": "多云管理平台",
@@ -80,7 +80,7 @@
     "Market": "集市",
     "May": "5月",
     "Members under the project/application associated with the current API can view it.": "当前API关联的项目/应用下的成员可以查看",
-    "Memory limit": "内存限额",
+    "Memory quota": "内存配额",
     "Middle-east & India": "中东与印度",
     "Mobile": "移动",
     "Model": "模型",
