feat: update interaction and update style in template

--- a/locales/en.json
+++ b/locales/en.json
@@ -23,7 +23,9 @@
     "April": "April",
     "Are you sure to leave?": "Are you sure to leave?",
     "Are you sure you want to deprecate {name}?": "Are you sure you want to deprecate {name}?",
+    "Are you sure you want to enable the channel ?": "Are you sure you want to enable the channel ?",
     "Are you sure you want to revert the deprecated status of {name}?": "Are you sure you want to revert the deprecated status of {name}?",
+    "Are you sure you want to switch channels ?": "Are you sure you want to switch channels ?",
     "Artifact": "Artifact",
     "Asia-pacific": "Asia-pacific",
     "Audit": "Audit",
@@ -81,6 +83,7 @@
     "May": "May",
     "Members under the project/application associated with the current API can view it.": "members under the project/application associated with the current API can view",
     "Memory quota": "Memory quota",
+    "Memory limit": "Memory limit",
     "Middle-east & India": "Middle-east & India",
     "Mobile": "Mobile",
     "Model": "Model",
@@ -147,6 +150,7 @@
     "Tickets": "Tickets",
     "Tokyo": "Tokyo",
     "URL parameters": "URL parameters",
+    "Under the same channel type, {type} has an enabled channel {enableChannelName}, whether to switch to {name} channel ?": "Under the same channel type, {type} has an enabled channel {enableChannelName}, whether to switch to {name} channel ?",
     "United Arab Emirates": "United Arab Emirates",
     "United States": "United States",
     "Version has been updated, it is recommended to refresh the page": "Version has been updated, it is recommended to refresh the page",
@@ -352,6 +356,7 @@
     "copied successfully": "copied successfully",
     "copy": "copy",
     "copy all": "copy all",
+    "copy and jump to the application page": "copy and jump to the application page",
     "core": "core",
     "could include Chinese, English, numbers, hyphens and underscores": "could include Chinese, English, numbers, hyphens and underscores",
     "country": "country",
@@ -605,6 +610,7 @@
     "not in": "not in",
     "not member": "not member",
     "not started": "not started",
+    "notice-channel-desc": "There can only be one open channel under the same type, and the active channel will be used to send notification messages of the corresponding type",
     "notification": "notification",
     "notification channel": "notification channel",
     "notification method": "notification method",
@@ -682,6 +688,7 @@
     "please input regexp": "please input regexp",
     "please input the SMS Template Code you have applied for on the service provider platform": "please input the SMS Template Code you have applied for on the service provider platform",
     "please input the SMS signature you have applied for on the service provider platform": "please input the SMS signature you have applied for on the service provider platform",
+    "please off the channel and then delete!": "please off the channel and then delete!",
     "please select": "please select",
     "please select labels": "please select labels",
     "please select role for member": "please select role for member",
@@ -898,6 +905,7 @@
     "trigger time": "trigger time",
     "type": "type",
     "ultimate": "ultimate",
+    "unable": "unable",
     "unable to connect": "unable to connect",
     "unblocked": "unblocked",
     "unblocking": "unblocking",
@@ -969,6 +977,7 @@
     "{size} items / page": "{size} items / page",
     "{specific} instance": "{specific} instance",
     "{total} item added successfully": "{total} item added successfully",
+    "{type} There is no enabled channel. Do you want to open the {name} channel? Click the open button to open": "{type} There is no enabled channel. Do you want to open the {name} channel? Click the open button to open",
     "{unreadCount} messages unread": "{unreadCount} messages unread"
   }
 }
