--- a/locales/zh.json
+++ b/locales/zh.json
@@ -23,7 +23,9 @@
     "April": "4月",
     "Are you sure to leave?": "确定离开",
     "Are you sure you want to deprecate {name}?": "确定要弃用 {name} 吗?",
+    "Are you sure you want to enable the channel ?": "您确定要启用通道吗?",
     "Are you sure you want to revert the deprecated status of {name}?": "确定要还原 {name} 为可用状态吗?",
+    "Are you sure you want to switch channels ?": "您确定要切换渠道吗?",
     "Artifact": "制品",
     "Asia-pacific": "亚太",
     "Audit": "审计",
@@ -81,6 +83,7 @@
     "May": "5月",
     "Members under the project/application associated with the current API can view it.": "当前API关联的项目/应用下的成员可以查看",
     "Memory quota": "内存配额",
+    "Memory limit": "内存限额",
     "Middle-east & India": "中东与印度",
     "Mobile": "移动",
     "Model": "模型",
@@ -147,6 +150,7 @@
     "Tickets": "工单",
     "Tokyo": "东京",
     "URL parameters": "URL参数",
+    "Under the same channel type, {type} has an enabled channel {enableChannelName}, whether to switch to {name} channel ?": "同一渠道类型下，{type} 有已开启的渠道 {enableChannelName} , 是否切换为 {name} 渠道？",
     "United Arab Emirates": "阿联酋",
     "United States": "美国",
     "Version has been updated, it is recommended to refresh the page": "版本已更新，建议刷新页面",
@@ -352,6 +356,7 @@
     "copied successfully": "复制成功",
     "copy": "复制",
     "copy all": "全部复制",
+    "copy and jump to the application page": "复制并跳转到应用程序页面",
     "core": "核",
     "could include Chinese, English, numbers, hyphens and underscores": "可包含中文、英文、数字、-、_",
     "country": "国家",
@@ -605,6 +610,7 @@
     "not in": "不包含",
     "not member": "非成员",
     "not started": "未启动",
+    "notice-channel-desc": "同一类型下只能有一个开启的渠道，启用中的渠道将用于发送对应类型的通知消息",
     "notification": "通知",
     "notification channel": "通知渠道",
     "notification method": "通知方式",
@@ -682,6 +688,7 @@
     "please input regexp": "请输入正则表达式",
     "please input the SMS Template Code you have applied for on the service provider platform": "请输入在服务商平台申请的短信模板 Code",
     "please input the SMS signature you have applied for on the service provider platform": "请输入在服务商平台申请的短信签名",
+    "please off the channel and then delete!": "请先停用后再删除!",
     "please select": "请选择",
     "please select labels": "请选择标签",
     "please select role for member": "请选择成员角色",
@@ -898,6 +905,7 @@
     "trigger time": "触发时间",
     "type": "类型",
     "ultimate": "旗舰版",
+    "unable": "停用",
     "unable to connect": "无法连接",
     "unblocked": "已解封",
     "unblocking": "解封中",
@@ -968,6 +976,7 @@
     "{num} {type}": "{num}个{type}",
     "{size} items / page": "{size} 条 / 页",
     "{specific} instance": "{specific}实例",
+    "{type} There is no enabled channel. Do you want to open the {name} channel? Click the open button to open": "{type} 无开启的渠道，是否开启 {name} 渠道？ 点击开启按钮后开启",
     "{total} item added successfully": "成功添加{total}条",
     "{unreadCount} messages unread": "共有 {unreadCount} 封未读站内信"
   }
