feat: modify coontent

--- a/locales/en.json
+++ b/locales/en.json
@@ -23,9 +23,9 @@
     "April": "April",
     "Are you sure to leave?": "Are you sure to leave?",
     "Are you sure you want to deprecate {name}?": "Are you sure you want to deprecate {name}?",
-    "Are you sure you want to enable the channel ?": "Are you sure you want to enable the channel ?",
+    "Are you sure you want to enable the notification channel ?": "Are you sure you want to enable the notification channel ?",
     "Are you sure you want to revert the deprecated status of {name}?": "Are you sure you want to revert the deprecated status of {name}?",
-    "Are you sure you want to switch channels ?": "Are you sure you want to switch channels ?",
+    "Are you sure you want to switch notification channels ?": "Are you sure you want to switch notification channels ?",
     "Artifact": "Artifact",
     "Asia-pacific": "Asia-pacific",
     "Audit": "Audit",
@@ -83,15 +83,14 @@
     "May": "May",
     "Members under the project/application associated with the current API can view it.": "members under the project/application associated with the current API can view",
     "Memory quota": "Memory quota",
-    "Memory limit": "Memory limit",
     "Middle-east & India": "Middle-east & India",
     "Mobile": "Mobile",
     "Model": "Model",
     "Mumbai": "Mumbai",
     "New version available": "New version available",
     "North China {num}": "North China {num}",
-    "Note: The {resource} quota you entered has exceeded the remaining resources of the cluster in {workSpace}. Further allocation will preempt resources on a first-used, first-served basis.": "Note: The {resource} quota you entered has exceeded the remaining resources of the cluster in {workSpace}. Further allocation will preempt resources on a first-used, first-served basis.",
     "Note: The precondition to create access management is that the API must first complete the project association and version instance association.": "Note: The precondition to create access management is that the API must first complete the project association and version instance association.",
+    "Note: The {resource} quota you entered has exceeded the remaining resources of the cluster in {workSpace}. Further allocation will preempt resources on a first-used, first-served basis.": "Note: The {resource} quota you entered has exceeded the remaining resources of the cluster in {workSpace}. Further allocation will preempt resources on a first-used, first-served basis.",
     "November": "November",
     "O & M alarm": "O & M alarm",
     "O & M report": "O & M report",
@@ -110,6 +109,7 @@
     "Please enter the number of {min}-{max} decimal": "Please enter the number of {min}-{max} decimal",
     "Please enter version number, such as x.y.z.": "please enter version number, such as x.y.z",
     "Project": "Project",
+    "Project management provides a securely isolated work platform with access control. Here you can see an overview of the resources running in the current enterprise space.": "Project management provides a securely isolated work platform with access control. Here you can see an overview of the resources running in the current enterprise space.",
     "Public": "Public",
     "Qingdao": "Qingdao",
     "Quality": "Quality",
@@ -126,7 +126,6 @@
     "Service": "Service",
     "Set up a notification channel to set a notification mode": "Set up a notification channel to set a notification mode",
     "Setting": "Setting",
-    "{key} Settings": "Settings",
     "Shanghai": "Shanghai",
     "Shenzhen": "Shenzhen",
     "Silicon valley": "Silicon valley",
@@ -146,11 +145,12 @@
     "The invitation link has been created.": "The invitation link has been created.",
     "The name is reserved internally. Please change the name.": "The name is reserved internally. Please change the name.",
     "The {index} item quantity and unit cannot be empty.": "The {index} item quantity and unit cannot be empty.",
+    "There is no enabled channel in {type} type. Do you want to enable the {name} channel? Click the ok button to enable": "There is no enabled channel in {type} type. Do you want to enable the {name} channel? Click the ok button to enable",
     "This page has no data, whether to go ": "This page has no data, whether to go ",
     "Tickets": "Tickets",
     "Tokyo": "Tokyo",
     "URL parameters": "URL parameters",
-    "Under the same channel type, {type} has an enabled channel {enableChannelName}, whether to switch to {name} channel ?": "Under the same channel type, {type} has an enabled channel {enableChannelName}, whether to switch to {name} channel ?",
+    "Under the same channel type, {type} type has an enabled channel {enableChannelName}, whether to switch to {name} channel ? Click ok button to confirm the switch, and close the enabled": "Under the same channel type, {type} type has an enabled channel {enableChannelName}, whether to switch to {name} channel ? Click ok button to confirm the switch, and close the enabled",
     "United Arab Emirates": "United Arab Emirates",
     "United States": "United States",
     "Version has been updated, it is recommended to refresh the page": "Version has been updated, it is recommended to refresh the page",
@@ -435,6 +435,7 @@
     "edit {name}": "edit {name}",
     "edited successfully": "edited successfully",
     "enable": "enable",
+    "enabled successfully": "enabled successfully",
     "enter key to save quickly": "enter key to save quickly",
     "entry domain": "entry domain",
     "entry mode": "entry mode",
@@ -647,8 +648,8 @@
     "out params {name} setting is abnormal": "out params {name} setting is abnormal",
     "overtime": "overtime",
     "overview": "overview",
-    "page loading completed": "page loading completed",
     "page 1": "page 1",
+    "page loading completed": "page loading completed",
     "parameter cannot be empty": "parameter cannot be empty",
     "parameter setting": "parameter setting",
     "passed": "passed",
@@ -714,7 +715,6 @@
     "project icon": "project icon",
     "project identifier": "project identifier",
     "project list": "project list",
-    "Project management provides a securely isolated work platform with access control. Here you can see an overview of the resources running in the current enterprise space.": "Project management provides a securely isolated work platform with access control. Here you can see an overview of the resources running in the current enterprise space.",
     "project name": "project name",
     "project setting": "settings",
     "project-app-name-tip": "you can only use lowercase letters or numbers to begin and end. The hyphen can use -",
@@ -906,6 +906,7 @@
     "type": "type",
     "ultimate": "ultimate",
     "unable": "unable",
+    "unable successfully": "unable successfully",
     "unable to connect": "unable to connect",
     "unblocked": "unblocked",
     "unblocking": "unblocking",
@@ -949,7 +950,6 @@
     "version number": "version number",
     "view comparison results": "view results",
     "view link": "view link",
-    "view more": "view more",
     "view {name}": "view {name}",
     "wait for {approver} to approve": "wait for {approver} to approve",
     "warning": "warning",
@@ -963,6 +963,7 @@
     "yesterday": "yesterday",
     "you have new site message, please pay attention to check": "you have new site message, please pay attention to check",
     "{action} successfully": "{action} successfully",
+    "{key} Settings": "Settings",
     "{label} can not be empty": "{label} can not be empty",
     "{min} ~ {max} digits": "{min} ~ {max} digits",
     "{name} already exists": "{name} already exists",
@@ -977,7 +978,6 @@
     "{size} items / page": "{size} items / page",
     "{specific} instance": "{specific} instance",
     "{total} item added successfully": "{total} item added successfully",
-    "{type} There is no enabled channel. Do you want to open the {name} channel? Click the open button to open": "{type} There is no enabled channel. Do you want to open the {name} channel? Click the open button to open",
     "{unreadCount} messages unread": "{unreadCount} messages unread"
   }
 }
