feat: update org projects menu text

--- a/locales/zh.json
+++ b/locales/zh.json
@@ -694,7 +694,7 @@
     "project setting": "项目设置",
     "project-app-name-tip": "只能使用小写字母或数字开头和结尾，连接符号可以使用 -",
     "project/application/branch": "项目/应用/分支",
-    "projects": "项目管理",
+    "projects": "项目列表",
     "protected branch": "被保护分支",
     "province": "省市区",
     "public": "公有",
