fix: fix resource rank table style

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -82,9 +82,9 @@
     "Instance is not ready": "Instance is not ready",
     "It is recommended to use 2 nodes in production, and 1 node in test. Only 1 node does not support the creation of SLB.": "suggest 2 nodes in production and 1 node in test, only 1 node does not support creation of slb",
     "Kubectl command": "Kubectl command",
-    "MEM allocation": "MEM allocation",
-    "MEM quota": "MEM quota",
-    "MEM usage": "MEM usage",
+    "Memory allocation": "Memory allocation",
+    "Memory quota": "Memory quota",
+    "Memory usage": "Memory usage",
     "Memory": "Memory",
     "Memory Water Level": "Memory Water Level",
     "Monthly": "Monthly",
