--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -82,9 +82,9 @@
     "Instance is not ready": "实例尚未准备就绪",
     "It is recommended to use 2 nodes in production, and 1 node in test. Only 1 node does not support the creation of SLB.": "建议生产2台，测试1台，只有1台时不支持创建slb",
     "Kubectl command": "Kubectl 命令行",
-    "MEM allocation": "内存分配",
-    "MEM quota": "内存配额",
-    "MEM usage": "内存使用",
+    "Memory allocation": "内存分配",
+    "Memory quota": "内存配额",
+    "Memory usage": "内存使用",
     "Memory": "内存",
     "Memory Water Level": "内存水位",
     "Monthly": "每月",
@@ -102,7 +102,7 @@
     "Node List": "节点列表",
     "Node conversion formula": "节点转换公式",
     "Notification group does not exist or has been remove. Please change one.": "通知组不存在或已被移除，可更换通知组",
-    "Number of used nodes": "使用节点数",
+    "Number of used nodes": "占用节点数",
     "O&M dashboard added successfully": "添加运维大盘成功",
     "O&M dashboard updated successfully": "更新运维大盘成功",
     "OSS Overview": "OSS 总览",
