--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -458,7 +458,7 @@
     "number of products": "产品数量",
     "number of references": "引用数",
     "offline": "下线",
-    "one node": "一个节点",
+    "one node": "一节点",
     "online": "在线",
     "operating system": "操作系统",
     "operation history": "操作历史",
