fix(common): project management list boot prompt change

--- a/locales/en.json
+++ b/locales/en.json
@@ -707,7 +707,6 @@
     "project icon": "project icon",
     "project identifier": "project identifier",
     "project list": "project list",
-    "Project management provides a securely isolated work platform with access control. Here you can see an overview of the resources running in the current enterprise space.": "Project management provides a securely isolated work platform with access control. Here you can see an overview of the resources running in the current enterprise space.",
     "project name": "project name",
     "project setting": "settings",
     "project-app-name-tip": "you can only use lowercase letters or numbers to begin and end. The hyphen can use -",
@@ -852,6 +851,7 @@
     "succeed": "succeed",
     "such as": "such as",
     "support load balancing": "support load balancing",
+    "support the creation and deletion of all projects in the organization, as well as the operation and management of project members and quotas.": "Support the creation and deletion of all projects in the organization, as well as the operation and management of project members and quotas.",
     "sure to exit the current {name}?": "sure to exit the current {name}?",
     "switch": "switch",
     "switch language": "switch language",
