fix(common): table operate column optimization

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -53,6 +53,7 @@
     "CIDR segment": "CIDR segment",
     "CIDR-tips": "the CIDR block cannot be modified after it is set. You can use 192.168.0.0/16, 172.16.0.0/12, 10.0.0.0/8, or their subnets as the CIDR blocks of VPCs. The CIDR block mask must be 8 to 24 bits in length. An example of a CIDR block is 192.168.0.0/16. ",
     "CPU quota": "CPU quota",
+    "CPU quota usage": "CPU quota usage",
     "CPU usage": "CPU usage",
     "CPU usage rate": "CPU usage rate",
     "Chinese": "Chinese",
@@ -84,6 +85,7 @@
     "Kubectl command": "Kubectl command",
     "Memory allocation": "Memory allocation",
     "Memory quota": "Memory quota",
+    "Memory quota usage": "Memory quota usage",
     "Memory usage": "Memory usage",
     "Memory": "Memory",
     "Memory Water Level": "Memory Water Level",
