--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -53,6 +53,7 @@
     "CIDR segment": "CIDR网段",
     "CIDR-tips": "支持使用 192.168.0.0/16、172.16.0.0/12、10.0.0.0/8 及其子网作为专有网络地址段，网段掩码有效范围 8-24。填写示例：192.168.0.0/16。",
     "CPU quota": "CPU 配额",
+    "CPU quota usage": "CPU 配额使用",
     "CPU usage": "CPU 使用",
     "CPU usage rate": "CPU 使用率",
     "Chinese": "中文",
@@ -84,6 +85,7 @@
     "Kubectl command": "Kubectl 命令行",
     "Memory allocation": "内存分配",
     "Memory quota": "内存配额",
+    "Memory quota usage": "内存配额使用",
     "Memory usage": "内存使用",
     "Memory": "内存",
     "Memory Water Level": "内存水位",
@@ -453,7 +455,7 @@
     "number of products": "产品数量",
     "number of references": "引用数",
     "offline": "下线",
-    "one node": "一节点",
+    "one node": "1 节点",
     "online": "在线",
     "operating system": "操作系统",
     "operation history": "操作历史",
