feat: optimize notice channel (#1938)
* feat: add status to table in notice channel

* feat: update interaction and update style in template

* feat: modify coontent

* refactor: refactor code

--- a/locales/en.json
+++ b/locales/en.json
@@ -23,7 +23,9 @@
     "April": "April",
     "Are you sure to leave?": "Are you sure to leave?",
     "Are you sure you want to deprecate {name}?": "Are you sure you want to deprecate {name}?",
+    "Are you sure you want to enable the notification channel ?": "Are you sure you want to enable the notification channel ?",
     "Are you sure you want to revert the deprecated status of {name}?": "Are you sure you want to revert the deprecated status of {name}?",
+    "Are you sure you want to switch notification channel ?": "Are you sure you want to switch notification channel ?",
     "Artifact": "Artifact",
     "Asia-pacific": "Asia-pacific",
     "Audit": "Audit",
@@ -87,8 +89,8 @@
     "Mumbai": "Mumbai",
     "New version available": "New version available",
     "North China {num}": "North China {num}",
-    "Note: The {resource} quota you entered has exceeded the remaining resources of the cluster in {workSpace}. Further allocation will preempt resources on a first-used, first-served basis.": "Note: The {resource} quota you entered has exceeded the remaining resources of the cluster in {workSpace}. Further allocation will preempt resources on a first-used, first-served basis.",
     "Note: The precondition to create access management is that the API must first complete the project association and version instance association.": "Note: The precondition to create access management is that the API must first complete the project association and version instance association.",
+    "Note: The {resource} quota you entered has exceeded the remaining resources of the cluster in {workSpace}. Further allocation will preempt resources on a first-used, first-served basis.": "Note: The {resource} quota you entered has exceeded the remaining resources of the cluster in {workSpace}. Further allocation will preempt resources on a first-used, first-served basis.",
     "November": "November",
     "O & M alarm": "O & M alarm",
     "O & M report": "O & M report",
@@ -107,6 +109,7 @@
     "Please enter the number of {min}-{max} decimal": "Please enter the number of {min}-{max} decimal",
     "Please enter version number, such as x.y.z.": "please enter version number, such as x.y.z",
     "Project": "Project",
+    "Project management provides a securely isolated work platform with access control. Here you can see an overview of the resources running in the current enterprise space.": "Project management provides a securely isolated work platform with access control. Here you can see an overview of the resources running in the current enterprise space.",
     "Public": "Public",
     "Qingdao": "Qingdao",
     "Quality": "Quality",
@@ -123,7 +126,6 @@
     "Service": "Service",
     "Set up a notification channel to set a notification mode": "Set up a notification channel to set a notification mode",
     "Setting": "Setting",
-    "{key} Settings": "Settings",
     "Shanghai": "Shanghai",
     "Shenzhen": "Shenzhen",
     "Silicon valley": "Silicon valley",
@@ -143,10 +145,12 @@
     "The invitation link has been created.": "The invitation link has been created.",
     "The name is reserved internally. Please change the name.": "The name is reserved internally. Please change the name.",
     "The {index} item quantity and unit cannot be empty.": "The {index} item quantity and unit cannot be empty.",
+    "There is no enabled channel in {type} type. Do you want to enable the {name} channel? Click the ok button to enable": "There is no enabled channel in {type} type. Do you want to enable the {name} channel? Click the ok button to enable",
     "This page has no data, whether to go ": "This page has no data, whether to go ",
     "Tickets": "Tickets",
     "Tokyo": "Tokyo",
     "URL parameters": "URL parameters",
+    "Under the same channel type, {type} type has an enabled channel {enableChannelName}, whether to switch to {name} channel ? Click ok button to confirm the switch, and close the enabled": "Under the same channel type, {type} type has an enabled channel {enableChannelName}, whether to switch to {name} channel ? Click ok button to confirm the switch, and close the enabled",
     "United Arab Emirates": "United Arab Emirates",
     "United States": "United States",
     "Version has been updated, it is recommended to refresh the page": "Version has been updated, it is recommended to refresh the page",
@@ -352,6 +356,7 @@
     "copied successfully": "copied successfully",
     "copy": "copy",
     "copy all": "copy all",
+    "copy and jump to the application page": "copy and jump to the application page",
     "core": "core",
     "could include Chinese, English, numbers, hyphens and underscores": "could include Chinese, English, numbers, hyphens and underscores",
     "country": "country",
@@ -430,6 +435,7 @@
     "edit {name}": "edit {name}",
     "edited successfully": "edited successfully",
     "enable": "enable",
+    "enabled successfully": "enabled successfully",
     "enter key to save quickly": "enter key to save quickly",
     "entry domain": "entry domain",
     "entry mode": "entry mode",
@@ -605,6 +611,7 @@
     "not in": "not in",
     "not member": "not member",
     "not started": "not started",
+    "notice-channel-desc": "There can only be one open channel under the same type, and the active channel will be used to send notification messages of the corresponding type",
     "notification": "notification",
     "notification channel": "notification channel",
     "notification method": "notification method",
@@ -641,8 +648,8 @@
     "out params {name} setting is abnormal": "out params {name} setting is abnormal",
     "overtime": "overtime",
     "overview": "overview",
-    "page loading completed": "page loading completed",
     "page 1": "page 1",
+    "page loading completed": "page loading completed",
     "parameter cannot be empty": "parameter cannot be empty",
     "parameter setting": "parameter setting",
     "passed": "passed",
@@ -682,6 +689,7 @@
     "please input regexp": "please input regexp",
     "please input the SMS Template Code you have applied for on the service provider platform": "please input the SMS Template Code you have applied for on the service provider platform",
     "please input the SMS signature you have applied for on the service provider platform": "please input the SMS signature you have applied for on the service provider platform",
+    "please off the channel and then delete!": "please off the channel and then delete!",
     "please select": "please select",
     "please select labels": "please select labels",
     "please select role for member": "please select role for member",
@@ -898,6 +906,8 @@
     "trigger time": "trigger time",
     "type": "type",
     "ultimate": "ultimate",
+    "unable": "unable",
+    "unable successfully": "unable successfully",
     "unable to connect": "unable to connect",
     "unblocked": "unblocked",
     "unblocking": "unblocking",
@@ -941,7 +951,6 @@
     "version number": "version number",
     "view comparison results": "view results",
     "view link": "view link",
-    "view more": "view more",
     "view {name}": "view {name}",
     "wait for {approver} to approve": "wait for {approver} to approve",
     "warning": "warning",
@@ -955,6 +964,7 @@
     "yesterday": "yesterday",
     "you have new site message, please pay attention to check": "you have new site message, please pay attention to check",
     "{action} successfully": "{action} successfully",
+    "{key} Settings": "Settings",
     "{label} can not be empty": "{label} can not be empty",
     "{min} ~ {max} digits": "{min} ~ {max} digits",
     "{name} already exists": "{name} already exists",
