--- a/locales/zh.json
+++ b/locales/zh.json
@@ -23,7 +23,9 @@
     "April": "4月",
     "Are you sure to leave?": "确定离开",
     "Are you sure you want to deprecate {name}?": "确定要弃用 {name} 吗?",
+    "Are you sure you want to enable the notification channel ?": "您确定要启用通知渠道吗?",
     "Are you sure you want to revert the deprecated status of {name}?": "确定要还原 {name} 为可用状态吗?",
+    "Are you sure you want to switch notification channel ?": "您确定要切换通知渠道吗?",
     "Artifact": "制品",
     "Asia-pacific": "亚太",
     "Audit": "审计",
@@ -87,8 +89,8 @@
     "Mumbai": "孟买",
     "New version available": "新版本可用",
     "North China {num}": "华北{num}",
-    "Note: The {resource} quota you entered has exceeded the remaining resources of the cluster in {workSpace}. Further allocation will preempt resources on a first-used, first-served basis.": "注意：您填写的 {resource} 配额已超过该集群在{workSpace}的剩余资源，继续分配会按先用先得的方式抢占资源。",
     "Note: The precondition to create access management is that the API must first complete the project association and version instance association.": "注意: 创建访问管理前置条件为，该 API 必须先完成项目关联 -> 版本实例关联",
+    "Note: The {resource} quota you entered has exceeded the remaining resources of the cluster in {workSpace}. Further allocation will preempt resources on a first-used, first-served basis.": "注意：您填写的 {resource} 配额已超过该集群在{workSpace}的剩余资源，继续分配会按先用先得的方式抢占资源。",
     "November": "11月",
     "O & M alarm": "运维告警",
     "O & M report": "运维报告",
@@ -107,6 +109,7 @@
     "Please enter the number of {min}-{max} decimal": "请填写{min}-{max}位小数的数字",
     "Please enter version number, such as x.y.z.": "请输入版本号，如：x.y.z",
     "Project": "项目",
+    "Project management provides a securely isolated work platform with access control. Here you can see an overview of the resources running in the current enterprise space.": "项目管理提供了安全隔离的、具有访问权限控制的工作平台。这里您可以看到当前企业空间内资源运行的概况。",
     "Public": "公开",
     "Qingdao": "青岛",
     "Quality": "质量",
@@ -123,7 +126,6 @@
     "Service": "服务",
     "Set up a notification channel to set a notification mode": "建立通知通道以设置通知模式",
     "Setting": "设置",
-    "{key} Settings": "{key}设置",
     "Shanghai": "上海",
     "Shenzhen": "深圳",
     "Silicon valley": "硅谷",
@@ -143,10 +145,12 @@
     "The invitation link has been created.": "邀请链接已创建",
     "The name is reserved internally. Please change the name.": "该命名被内部保留，请更改命名",
     "The {index} item quantity and unit cannot be empty.": "第{index}项数量和单位不得为空",
+    "There is no enabled channel in {type} type. Do you want to enable the {name} channel? Click the ok button to enable": "{type}类型无开启的渠道，是否开启 {name} 渠道？ 点击确定按钮后开启",
     "This page has no data, whether to go ": "该页暂无数据，是否前往 ",
     "Tickets": "工单",
     "Tokyo": "东京",
     "URL parameters": "URL参数",
+    "Under the same channel type, {type} type has an enabled channel {enableChannelName}, whether to switch to {name} channel ? Click ok button to confirm the switch, and close the enabled": "同一渠道类型下，{type}类型有已开启的渠道 {enableChannelName} , 是否切换为 {name} 渠道 ？点击确定按钮进行切换，同时关闭已开启的",
     "United Arab Emirates": "阿联酋",
     "United States": "美国",
     "Version has been updated, it is recommended to refresh the page": "版本已更新，建议刷新页面",
@@ -352,6 +356,7 @@
     "copied successfully": "复制成功",
     "copy": "复制",
     "copy all": "全部复制",
+    "copy and jump to the application page": "复制并跳转到申请页面",
     "core": "核",
     "could include Chinese, English, numbers, hyphens and underscores": "可包含中文、英文、数字、-、_",
     "country": "国家",
@@ -430,6 +435,7 @@
     "edit {name}": "编辑{name}",
     "edited successfully": "编辑成功",
     "enable": "启用",
+    "enabled successfully": "启用成功",
     "enter key to save quickly": "回车键快速保存",
     "entry domain": "入口域名",
     "entry mode": "录入模式",
@@ -605,6 +611,7 @@
     "not in": "不包含",
     "not member": "非成员",
     "not started": "未启动",
+    "notice-channel-desc": "同一类型下只能有一个开启的渠道，启用中的渠道将用于发送对应类型的通知消息",
     "notification": "通知",
     "notification channel": "通知渠道",
     "notification method": "通知方式",
@@ -641,8 +648,8 @@
     "out params {name} setting is abnormal": "出参 {name} 设置异常",
     "overtime": "超时",
     "overview": "总览",
-    "page loading completed": "网页加载完成",
     "page 1": "第一页",
+    "page loading completed": "网页加载完成",
     "parameter cannot be empty": "参数不能为空",
     "parameter setting": "参数设置",
     "passed": "已通过",
@@ -682,6 +689,7 @@
     "please input regexp": "请输入正则表达式",
     "please input the SMS Template Code you have applied for on the service provider platform": "请输入在服务商平台申请的短信模板 Code",
     "please input the SMS signature you have applied for on the service provider platform": "请输入在服务商平台申请的短信签名",
+    "please off the channel and then delete!": "请先停用后再删除!",
     "please select": "请选择",
     "please select labels": "请选择标签",
     "please select role for member": "请选择成员角色",
@@ -898,6 +906,8 @@
     "trigger time": "触发时间",
     "type": "类型",
     "ultimate": "旗舰版",
+    "unable": "停用",
+    "unable successfully": "停用成功",
     "unable to connect": "无法连接",
     "unblocked": "已解封",
     "unblocking": "解封中",
@@ -941,7 +951,6 @@
     "version number": "版本号",
     "view comparison results": "查看对比结果",
     "view link": "查看链路",
-    "view more": "查看更多",
     "view {name}": "查看{name}",
     "wait for {approver} to approve": "等待{approver}审批",
     "warning": "警告",
@@ -955,6 +964,7 @@
     "yesterday": "昨天",
     "you have new site message, please pay attention to check": "您有新的站内信，请注意查看",
     "{action} successfully": "{action}成功",
+    "{key} Settings": "{key}设置",
     "{label} can not be empty": "{label} 不能为空",
     "{min} ~ {max} digits": "{min} ~ {max} 位",
     "{name} already exists": "{name}已存在",
