fix: jump tto project member management when the project owner view app which is no auth

--- a/locales/en.json
+++ b/locales/en.json
@@ -824,6 +824,7 @@
     "set successfully": "set successfully",
     "set tags": "set tags",
     "setting": "setting",
+    "setting permissions": "setting permissions",
     "silence period policy": "silence period policy",
     "site message": "site message",
     "skip": "skip",
