--- a/locales/zh.json
+++ b/locales/zh.json
@@ -824,6 +824,7 @@
     "set successfully": "设置成功",
     "set tags": "设置标签",
     "setting": "设置",
+    "setting permissions": "设置权限",
     "silence period policy": "沉默周期策略",
     "site message": "站内信",
     "skip": "跳过",
