--- a/locales/en.json
+++ b/locales/en.json
@@ -146,6 +146,7 @@
     "The name is reserved internally. Please change the name.": "The name is reserved internally. Please change the name.",
     "The {index} item quantity and unit cannot be empty.": "The {index} item quantity and unit cannot be empty.",
     "There is no enabled channel in {type} type. Do you want to enable the {name} channel? Click the ok button to enable": "There is no enabled channel in {type} type. Do you want to enable the {name} channel? Click the ok button to enable",
+    "There is no option under this tab, you can choose the matching mode to input data": "There is no option under this tab, you can choose the matching mode to input data",
     "This page has no data, whether to go ": "This page has no data, whether to go ",
     "Tickets": "Tickets",
     "Tokyo": "Tokyo",
