--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -134,6 +134,7 @@
     "The last deployment information has been initialized. Please click the reset button at the bottom if unnecessary.": "The last deployment information has been initialized for you. If you don't need it, please click the reset button at the bottom.",
     "The number of IPs should be a multiple of the number of copies.": "The number of IPs should be a multiple of the number of copies.",
     "The total number of selected resources": "The total number of selected resources",
+    "There is no option under this tab, you can choose the matching mode to input data": "There is no option under this tab, you can choose the matching mode to input data",
     "Total": "Total",
     "Trend of cluster resources": "Trend of cluster resources",
     "VIP segment": "VIP segment",
