fix: optimize alarm strategy (#1980)
* fix: optimize alaarm strategy

* fix: add message to reminnd user

* refactor: move the translation to cmp module

* refactor: refactor code

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -82,11 +82,11 @@
     "Instance is not ready": "Instance is not ready",
     "It is recommended to use 2 nodes in production, and 1 node in test. Only 1 node does not support the creation of SLB.": "suggest 2 nodes in production and 1 node in test, only 1 node does not support creation of slb",
     "Kubectl command": "Kubectl command",
+    "Memory": "Memory",
     "Memory allocation": "Memory allocation",
     "Memory quota": "Memory quota",
     "Memory quota usage": "Memory quota usage",
     "Memory usage": "Memory usage",
-    "Memory": "Memory",
     "Monthly": "Monthly",
     "MySQL Erda database": "MySQL Erda database",
     "MySQL Host": "MySQL Host",
@@ -134,6 +134,7 @@
     "The last deployment information has been initialized. Please click the reset button at the bottom if unnecessary.": "The last deployment information has been initialized for you. If you don't need it, please click the reset button at the bottom.",
     "The number of IPs should be a multiple of the number of copies.": "The number of IPs should be a multiple of the number of copies.",
     "The total number of selected resources": "The total number of selected resources",
+    "There is no option under this tab, you can choose the matching mode to input data": "There is no option under this tab, you can choose the matching mode to input data",
     "Total": "Total",
     "Trend of cluster resources": "Trend of cluster resources",
     "VIP segment": "VIP segment",
