--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -82,11 +82,11 @@
     "Instance is not ready": "实例尚未准备就绪",
     "It is recommended to use 2 nodes in production, and 1 node in test. Only 1 node does not support the creation of SLB.": "建议生产2台，测试1台，只有1台时不支持创建slb",
     "Kubectl command": "Kubectl 命令行",
+    "Memory": "内存",
     "Memory allocation": "内存分配",
     "Memory quota": "内存配额",
     "Memory quota usage": "内存配额使用",
     "Memory usage": "内存使用",
-    "Memory": "内存",
     "Monthly": "每月",
     "MySQL Erda database": "MySQL Erda数据库名",
     "MySQL Host": "MySQL主机",
@@ -134,6 +134,7 @@
     "The last deployment information has been initialized. Please click the reset button at the bottom if unnecessary.": "已为您初始化上次部署信息，若不需要，请点击最下方重置按钮",
     "The number of IPs should be a multiple of the number of copies.": "IP个数应为副本数的倍数",
     "The total number of selected resources": "筛选项资源总和",
+    "There is no option under this tab, you can choose the matching mode to input data": "此标签下暂无选项，您可以选择匹配模式输入数据",
     "Total": "总计",
     "Trend of cluster resources": "集群资源变化趋势",
     "VIP segment": "VIP网段",
