feat: update cmp container menu (#1983)
* feat: update cmp container menu

* fix: fix i18n

* fix: delete useless

* fix: fix copyright

--- a/locales/zh.json
+++ b/locales/zh.json
@@ -347,9 +347,11 @@
     "console": "控制台",
     "consume count": "消费次数",
     "consumer": "消费者",
+    "container": "容器",
     "container ID": "容器ID",
     "container IP": "容器 IP",
     "container monitor": "容器监控",
+    "container resource": "容器资源",
     "content": "内容",
     "content of notification object is missing, please complete!": "通知对象内容缺失，请填写!",
     "copied successfully": "复制成功",
