--- a/locales/en.json
+++ b/locales/en.json
@@ -347,9 +347,11 @@
     "console": "console",
     "consume count": "consume count",
     "consumer": "consumer",
+    "container": "container",
     "container ID": "container ID",
     "container IP": "Container IP",
     "container monitor": "container monitor",
+    "container resource": "container resource",
     "content": "content",
     "content of notification object is missing, please complete!": "content of notification object is missing, please complete!",
     "copied successfully": "copied successfully",
