feat(org): add apply for column in approval table

--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -196,6 +196,7 @@
     "approval time": "审批时间",
     "approved": "已审批",
     "approver": "审批人",
+    "apply for": "申请内容",
     "are you sure you want to delete this task?": "确认删除此任务？",
     "are you sure you want to reset?": "确定要重置吗?",
     "artificial-renewal-change-time": "如您在扣款日期前人工续费，则系统按最新到期时间自动进行续费",
