fix: display groups in notification object in msp and cmp

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -187,6 +187,7 @@
     "allocation": "allocation",
     "allocation component node": "allocation component node",
     "analysis result": "analysis result",
+    "and {length} others": "and {length} others",
     "announcement content": "content",
     "announcement management": "announcement management",
     "application used": "application used",
