--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -187,6 +187,7 @@
     "allocation": "分配量",
     "allocation component node": "分配组件节点",
     "analysis result": "分析结果",
+    "and {length} others": "等 {length} 组在内",
     "announcement content": "公告内容",
     "announcement management": "公告管理",
     "application used": "应用已使用",
