feat(msp): adjust the msp menu
feat(msp): adjust the msp menu

feat(msp): adjust the msp menu

--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -2479,6 +2479,7 @@
     "times/second": "次/秒",
     "token management": "Token管理",
     "tolerable": "可容忍",
+    "topology": "拓扑",
     "total connections": "总连接数",
     "total number of errors": "错误总数",
     "total span time": "总 span 时间",
@@ -2503,6 +2504,7 @@
     "uniform domain name entry": "统一域名入口",
     "update configuration": "更新配置",
     "update period": "更新周期",
+    "usage guide": "使用引导",
     "use global strategy": "使用全局策略",
     "user experience": "用户体验",
     "user experience apdex": "用户体验Apdex",
@@ -2523,6 +2525,7 @@
     "whitelist": "白名单",
     "will the current service domain name": "是否将当前服务域名",
     "wrong duration": "持续时间区间错误",
+    "you have not added {name} in the current environment": "当前环境您还没有添加{name}",
     "{num} day": "{num}天",
     "{num} hour": "{num}小时",
     "{num} month": "{num}月",
