--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -2479,6 +2479,7 @@
     "times/second": "times/second",
     "token management": "token management",
     "tolerable": "tolerable",
+    "topology": "topology",
     "total connections": "total connections",
     "total number of errors": "total number of errors",
     "total span time": "total span time",
@@ -2503,6 +2504,7 @@
     "uniform domain name entry": "uniform domain name entry",
     "update configuration": "update configuration",
     "update period": "update period",
+    "usage guide": "usage guide",
     "use global strategy": "use global strategy",
     "user experience": "user experience",
     "user experience apdex": "user experience apdex",
@@ -2523,6 +2525,7 @@
     "whitelist": "whitelist",
     "will the current service domain name": "will the current service domain name",
     "wrong duration": "wrong duration",
+    "you have not added {name} in the current environment": "you have not added {name} in the current environment",
     "{num} day": "{num} day",
     "{num} hour": "{num} hour",
     "{num} month": "{num} month",
